# OpenGLProj

./: CMakeLists.txt  README.md
include/glad/: glad.h
shader/: fragmentshader.frag  vertexshader.vert
shaders/: fragmentshader.frag  vertexshader.vert
src/: camera.h  config.h  fragmentShaderSrc.glsl  fragmentshader.frag  glad.c  main.cpp  shader.h  vertexShaderSrc.glsl
